# Aura-OS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_REPORT.md  Dockerfile.aether  Dockerfile.swarm  JULES_TASKS.md  MIGRATION_EXECUTION_LOG.md  README.md  TEST_REPORT.md  cinematic_demo.py  docker-compose.aether.yml  ignite_senses.py  profile_forge.py  pyproject.toml  pytest.ini  requirements-firebase.txt  requirements.txt  setup_aether_cloud.sh  setup_firebase_migration.sh  test_aether_sovereign.py  test_alpha_sovereign.py  test_motor_cortex.py  test_sensory_cortex.py  test_swarm.py  verify_nexus.py
.github/workflows/: aether_ci.yml  ci.yml  firebase-deployment.yml  monitor_gemini_api.yml
.idx/: Skills.md  memories.md  suffix.txt
AetherOS Plan FIles/: AetherOS_Improvement_Plan.md  NEXT_STEPS.md
AetherOS_Gemini_Submission/: AetherOS_Gemini_Submission.md  README.md  competitive_matrix.json  demo_script.md  telemetry_analysis.json  telemetry_visualization.py  vector1_core_signal.md  vector2_engineering.md  vector3_empirical_proof.md
aether_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aetheros.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/aether_core/: aether_config_loader.py  aether_intent.py  aether_lambda.py  aether_parliament.py  aether_telemetry.py
agent/aether_forge/: __init__.py  adk_integration.ts  aether_forge.py  aether_nexus.py  archaeology.py  circuit_breaker.py  cloud_nexus.py  compiler.py  constraint_solver.py  dynamic_threshold.py  exceptions.py  executors.py  feedback_loop.py  firebase_nexus.ts  gemini_live_bridge.py  live_bridge_v2.py  micro_ui.py  models.py  motor_cortex.py  sandbox.py  secure_http.py  stream_utils.py  ui_server.py  visualizer.py  vulnerability_tests.py
agent/aether_memory/: AGENTS.md  CAUSAL.md  HEARTBEAT.md  INFERENCE.md  MEMORY.md  NEXUS.json  NEXUS.md  PULSE.md  SHADOW_MAPS.json  SKILLS.md  TELEMETRY.json  TOPOLOGY.md  WORLD.md
agent/aether_orchestrator/: adk_router.py  aether_evolve.py  (+16 more)
api/: pulse.js
client/: package-lock.json
config/: aether_config.json  aether_skills.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  implementation_plan.md  task.md
edge_client/: index.html  package-lock.json  package.json  vite.config.ts
edge_client/src-tauri/: Cargo.toml  setup_models.sh
edge_client/src-tauri/src/: main.rs  vision.rs
evolution_sandbox/: swarm_node.py
firebase/: firebase.json  firestore.rules  storage.rules
migration/: FIREBASE_MIGRATION_REPORT.md  service_mapping_table.md
plans/: AETHEREVOLVE_OMEGA_IMPLEMENTATION_PLAN.md  aether_evolve_omega_architecture.md  aether_evolve_omega_final_architecture_improvement.md  aether_evolve_voice_architecture.md  aetheros_development_plan.md  report_improvement_plan.md  report_improvement_plan_refined.md
swarm_infrastructure/: Dockerfile  requirements.txt
tests/: conftest.py  demo_target.html  shadow_swarm.py  sovereign_healing_stress.py  test_aether_evolve_security.py  test_aether_evolve_standalone.py  test_aether_forge.py  test_aether_mind.py  test_aether_voice_mega_agent.py  test_alpha_evolve_security.py  test_alpha_evolve_standalone.py  test_constraint_solver.py  test_forge_models.py  test_main.py  test_memory_parser.py  test_models.py  test_motor_cortex.py  test_voice_features.py  trigger_poison.py
(+92 files in other folders)
