[package]
name = "aura-edge"
version = "0.1.0"
description = "AuraOS Edge Client - The Optic Nerve"
authors = ["AetherCore Architect"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
scrap = "0.5.0"
cpal = "0.15.3"
regex = "1.10"
lazy_static = "1.4"
image = "0.24"
bytemuck = "1.14"
enigo = "0.1"
ocrs = "0.12.1"
rten = "0.24.0"
rten-tensor = "0.24.0"
rten-imageproc = "0.24.0"

[lib]
name = "aura_edge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
